Change primary nav hover to fix contrast issue

--- a/themes/digital.gov/static/css/override.css
+++ b/themes/digital.gov/static/css/override.css
@@ -7,8 +7,21 @@ h1,h2,h3,h4,h5,h6,h7,#sitetitle .title {font-family:Trebuchet,Tahoma,sans-serif;
 ul.nav ul a {
   background-color: transparent;
 }
-ul.nav a,ul.nav ul a {color:#ffffff;}
-ul.nav a:hover,ul.nav ul a:hover {color:#ff6860;}
+ul.nav a {
+  border-bottom: 4px solid transparent;
+  color:#fff;
+}
+ul.nav a:hover {
+  border-color: #ff6860;
+  color:#fff;
+}
+ul.nav ul a {
+  color: #fff;
+}
+ul.nav ul a:hover {
+  color: #222;
+}
+
 ul.nav li.current-menu-parent > a,ul.nav li.current-menu-item > a,ul.nav li.current_page_item > a,ul.nav li li.current-menu-item > a,ul.nav li li.current-menu-item > a:hover,ul.nav li li.current_page_item > a,ul.nav li li.current_page_item > a:hover,ul.nav li li.current-menu-parent > a {color:#ff6860;}
 #catnav,#catnav ul ul a {border:0 !important;font-size:9pt;font-weight:normal;font-family:Arial,Helvetica,sans-serif;background-color:#fafafa;}
 #catnav a,#catnav ul ul a {border:0 !important;color:#333333;}
